# cargo-oxidize

./: .gitignore  Cargo.toml
src/: main.rs
