[package]
name = "cargo-oxidize"
version = "0.1.0"
authors = ["Nipunn Koorapati <nipunn1313@gmail.com>", "Jamie Turner <jamwt@dropbox.com>"]
keywords = ["subcommand", "template", "workspace"]
repository = "https://github.com/nipunn1313/cargo-oxidize"
description = """
A Cargo subcommand to autogenerate templated Cargo.toml files within a workspace.
"""

[dependencies]
cargo = "0.21"
env_logger = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"
walkdir = "1"
